# terminal-json-viewer

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  test.json
src/json_viewer/: __init__.py  cli.py  extractor.py  formatter.py
tests/: __init__.py  test_extractor.py  test_formatter.py
