[project]
name = "json-viewer"
version = "0.1.0"
description = "A command-line tool for viewing and formatting JSON files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pyperclip"]

[project.scripts]
json-viewer = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
